# backend

./: .ebignore  .gitignore  README.md  pyproject.toml  requirements.txt  zsh.exe.stackdump
.github/workflows/: cicd.yml
.secrets/: secret.json
comments/: admin.py  models.py  serializers.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_alter_comment_options.py  0002_initial.py  0003_auto_20221022_2230.py
config/: settings.py  urls.py
posts/: admin.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_auto_20220930_0203.py  0002_initial.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_profile_name.py  0002_auto_20220929_2331.py  0003_alter_user_updated_at.py  0003_auto_20221022_2230.py
